Fixed Alignment issue

--- a/src/Style.css
+++ b/src/Style.css
@@ -76,3 +76,10 @@ img {
   width: 100%;
   text-align: center;
 }
+
+.conversions{
+  
+  width: 30%;
+  display: inline-block;
+
+}
